k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: javabase
  labels:
    app.kubernetes.io/name: javabase
    app.kubernetes.io/part-of: javabase
